@@ -1,11 +1,22 @@
 /*
- * $Id: ChangeLog,v 1.1119 2013-07-26 19:28:43 migsoft Exp $
+ * $Id: ChangeLog,v 1.1120 2013-07-27 02:08:17 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2013-07-26 23:08 UTC-0400 MigSoft <migsoft@oohg.org>
+   * source/c_dialogs.c
+     ! C_PUTFILE generates RTE when fifth parameter is not a string.
+     * Restored default behaviour: user input is returned as is,
+       without adding a default extension.
+     + Added support for returning a default extension.
+   * source/h_dialogs.prg
+     + Added parameter lForceExt to function PUTFILE. When .T. the
+       function will, always, return a filename with the first
+       extension specified in aFilter.
 
 2013-07-26 14:03 UTC-0400 MigSoft <migsoft@oohg.org>
    * source/c_dialogs.c
